--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
             <div class="footer-column">
                 <h4>Quick Links</h4>
                 <a href="faq.html">FAQ</a>
-                <a href="https://apps.apple.com/us/app/triprank-speed-tracker/id6757245082">Download App</a>
+                <a href="https://apps.apple.com/us/app/triprank-speed-tracker/id6757245082" onclick="openAppStore(event, 'ios')">Download App</a>
                 <a href="contact.html">Contact</a>
             </div>
             <div class="footer-column">
@@ -94,5 +94,20 @@
             <p>&copy; 2026 TripRank. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- App Store Link Handler - Opens in new tab to work on TikTok -->
+    <script>
+        function openAppStore(event, platform) {
+            event.preventDefault();
+            
+            const urls = {
+                ios: 'https://apps.apple.com/us/app/triprank-speed-tracker/id6757245082?mt=8',
+                android: 'https://play.google.com/store/apps/details?id=io.uros.triprank'
+            };
+            
+            // Open in new tab - this works on TikTok and other platforms
+            window.open(urls[platform], '_blank');
+        }
+    </script>
 </body>
 </html>
