--- a/privacy.html
+++ b/privacy.html
@@ -118,19 +118,6 @@
         </div>
     </footer>
 
-    <!-- App Store Link Handler - Opens in new tab to work on TikTok -->
-    <script>
-        function openAppStore(event, platform) {
-            event.preventDefault();
-            
-            const urls = {
-                ios: 'https://apps.apple.com/us/app/triprank-speed-tracker/id6757245082?mt=8',
-                android: 'https://play.google.com/store/apps/details?id=io.uros.triprank'
-            };
-            
-            // Open in new tab - this works on TikTok and other platforms
-            window.open(urls[platform], '_blank');
-        }
-    </script>
+    <script src="app-store.js"></script>
 </body>
 </html>
