--- a/privacy.html
+++ b/privacy.html
@@ -94,7 +94,7 @@
             <div class="footer-column">
                 <h4>Quick Links</h4>
                 <a href="faq.html">FAQ</a>
-                <a href="https://apps.apple.com/us/app/triprank-speed-tracker/id6757245082" onclick="openAppStore(event, 'ios')">Download App</a>
+                <a href="#" onclick="openAppStore('ios'); return false;">Download App</a>
                 <a href="contact.html">Contact</a>
             </div>
             <div class="footer-column">
@@ -118,6 +118,7 @@
         </div>
     </footer>
 
+    <!-- App Store Link Handler -->
     <script src="app-store.js"></script>
 </body>
 </html>
