--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
         <!-- App Store Badges - Stacked -->
         <div class="store-badges">
-            <img src="assets/app-store.svg" alt="Download on the App Store" class="store-badge" onclick="openAppStore('ios')" style="cursor: pointer;" role="button" aria-label="Download TripRank on the App Store">
-            <img src="assets/google-play.svg" alt="Get it on Google Play" class="store-badge" onclick="openAppStore('android')" style="cursor: pointer;" role="button" aria-label="Get TripRank on Google Play">
+            <img src="assets/app-store.svg" alt="Download on the App Store" class="store-badge" onclick="return openAppStore('ios')" style="cursor: pointer;" role="button" aria-label="Download TripRank on the App Store">
+            <img src="assets/google-play.svg" alt="Get it on Google Play" class="store-badge" onclick="return openAppStore('android')" style="cursor: pointer;" role="button" aria-label="Get TripRank on Google Play">
         </div>
 
         <!-- Social Proof -->
